--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,8 @@
 	<a href="contact.html">Contact</a>
 	<a href="http://hud.gov" target="_blank">H.U.D.</a>
 
+	<h3>Contact</h3>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d12069.329712402181!2d-74.0241366!3d40.86457835!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1463960686111" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 </body>
 </html>
